Placing Is No Longer In A Weird Location. The Unit Is Shown While Placing It. Towers now run off the Main Thread instead of their own thread. Prep work for upgrades